# LWCLI

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  vcpkg.json
benchmark/: CMakeLists.txt  string_vs_map.cpp
include/: defines.hpp
include/LWCLI/: LWCLI.hpp  _options_stores.hpp  _util.hpp  cast.hpp  cast_string.hpp  exceptions.hpp  options.hpp  parser.hpp  type_utility.hpp  unreachable.hpp
sandbox/: CMakeLists.txt  sandbox.cpp
test/: .clang-tidy  CMakeLists.txt  assert_tests.cpp  cast_tests.cpp  integration.cpp
